@@ -29,12 +29,12 @@ test_that("ncvreg reproduces lasso", {
   X <- matrix(rnorm(n*p), ncol=p)
   y <- rnorm(n)
   yy <- runif(n) > .5
-  nlasso <- coef(fit <- ncvreg(X, y, gamma=1e8))
+  nlasso <- coef(fit <- ncvreg(X, y, penalty="lasso"))
   par(mfrow=c(2,2)); plot(fit, log=TRUE)
   glasso <- as.matrix(coef(fit <- glmnet(X, y, lambda=fit$lambda)))
   plot(fit, "lambda")
   expect_that(nlasso, equals(glasso, tolerance=.01, check.attributes=FALSE))
-  nlasso <- coef(fit <- ncvreg(X, yy, family="binomial", gamma=1e8))
+  nlasso <- coef(fit <- ncvreg(X, yy, family="binomial", penalty="lasso"))
   plot(fit, log=TRUE)
   glasso <- as.matrix(coef(fit <- glmnet(X, yy, family="binomial", lambda=fit$lambda)))
   plot(fit, "lambda")  
